--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 ring = "0.16.20"
 sui-keys = { git = "https://github.com/MystenLabs/sui.git" }
 sui-types = { git = "https://github.com/MystenLabs/sui.git" }
+clap = { version = "4.5", features = ["derive"] }
+num_cpus = "1.16"
+crossbeam-channel = "0.5"
